# tripmate-ai

./: .editorconfig  .env.example  .gitattributes  .gitignore  README.md
backend/: .env.example  README.md  app.py  pyproject.toml  requirements.txt  streamlit_app.py
backend/src/: __init__.py  config.py
backend/src/agents/: __init__.py
backend/src/agents/phase1/: __init__.py  flight_searcher.py  hotel_searcher.py  info_collector.py  itinerary_planner.py
backend/src/api/: __init__.py  chat.py  plan.py  sessions.py
backend/src/graph/: __init__.py  phase1_graph.py
backend/src/models/: __init__.py  state.py
backend/src/tools/: __init__.py
backend/src/utils/: __init__.py  prompts.py
backend/tests/: __init__.py  conftest.py  test_agents.py  test_api.py
docs/examples/: conversation-flow.md
docs/requirements/: agent-design.md  api-spec.md  phase1-requirements.md  phase2-requirements.md  state-management.md  system-design.md
docs/setup/: environment.md
frontend/: .env.example  README.md  package.json  tailwind.config.js  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/types/: index.ts
frontend/src/utils/: formatters.ts
shared/: types.ts
