[project]
name = "tripmate-ai-backend"
version = "1.0.0"
description = "LangGraph-based AI Travel Planner Backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "TripMate AI Team" }
]

[project.urls]
Homepage = "https://github.com/your-username/tripmate-ai"

# ===========================
# Black Formatter
# ===========================
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

# ===========================
# isort (Import Sorter)
# ===========================
[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ===========================
# pytest
# ===========================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

# ===========================
# Coverage
# ===========================
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# ===========================
# mypy (Type Checker)
# ===========================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "tests"]

# ===========================
# flake8 Configuration
# ===========================
# Note: flake8 doesn't support pyproject.toml natively
# Use setup.cfg or .flake8 file instead

# ===========================
# Build System
# ===========================
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
